--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-<h1>Seraphim Naomi Natasha Hinomiana Nainggolan</h1>
+<!DOCTYPE html>
+<html lang="en">
+    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="../styles/index.css">
+    <title>Portfolio Website</title>
+</head>
+<body>
+    <div class="side-decoration left-decoration">
+        <img src="assets/right-animation.gif" alt="Left Animation">
+    </div>
+
+    <div class="side-decoration right-decoration">
+        <img src="assets/right-animation.gif" alt="Right Animation">
+    </div>
+
+    <header>
+        <a href="#" class="logo gradient-text">Seraphim Nainggolan</a>
+        <div id="menu-icon" class="menu-icon">
+            <i class="fas fa-bars"></i>
+        </div>
+        <nav>
+            <a href="#home" class="active">Home</a>
+            <a href="#skills">Skills</a>
+            <a href="#education">Education</a>
+            <a href="#experience">Experience</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <section class="banner">
+        <img src="assets/jojo-jolynee.gif" alt="Banner">
+    </section>
+
+    <section id="home" class="home">
+        <div class="home-img cont">
+          <img src="assets/main.jpeg" alt="Profile Picture" class="image">
+          <div class="overlay">cred: @picklemuncher</div>
+        </div>
+
+
+        <div class="home-content">
+            <h1>Hi, It's <span>Sera</span></h1>
+            <h3 class="typing-text">
+                I'm <span id="article" class="article">a</span>
+                <span id="role" class="role"></span>
+                <span class="cursor">|</span>
+            </h3>
+
+
+            <p>Hi! I'm Seraphim Naomi Natasha Hinomiana Nainggolan. I specialize in editing, animation, and digital design, combining creative ideas with solid technical skills. I’m always learning and taking on new challenges. Thanks for visiting my portfolio!</p>
+
+            <div class="social-icons">
+                <a href="https://github.com/pim3000" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/s4raph/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+
+            <a href="#" class="btn">Hire me</a>
+        </div>
+    </section>
+
+    <section id="skills" class="skills">
+        <h2>Skills</h2>
+        <p>I’m a creative who loves making cool stuff in whatever form it takes. I draw, I animate, I sculpt, and I edit.. basically bringing ideas to life however they show up in my brain. I also design and build cosplay props, turning concepts into real, physical pieces. I like experimenting, mixing mediums, and turning random sparks of inspiration into something tangible. My skills are all over the place in the best way, and I use them to make work that feels alive, fun, and very me.</p>
+    </section>
+    <section id="education" class="education">
+        <h2>Education</h2>
+        <p>I’m from SMA Santa Theresia. During my time there, I learned a lot of things that helped me grow, like working with others, managing my time, and trying new creative ideas. The school really shaped how I think and helped me improve day by day.</p>
+    </section>
+    <section id="experience" class="experience">
+        <h2>Experience</h2>
+        <p>I’ve taken on multiple art commissions from different clients. I started offering commissions on Discord and even though I didn’t stay active there for long, I still received orders from more than 10 customers. Now I do all my commissions through WhatsApp, which makes communication easier and more personal. I enjoy working with clients, understanding their ideas, and creating something they’re excited about.</p>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Contact</h2>
+        <p>@s4raph on ig</p>
+    </section>
+
+    <script src="../scripts/index.js"></script>
+</body>
+</html>
